Abstraction auth services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.data.mongodb.port=2717
 
 # App Properties
 orso.app.jwtSecret= bezKoderSecretKey
-orso.app.jwtExpirationMs= 10
+orso.app.jwtExpirationMs= 2147483647
 
 # App random key
 orso.app.randomKey= random_key
